--- a/greatest-node-application-ever/views/mixins/_storeCard.pug
+++ b/greatest-node-application-ever/views/mixins/_storeCard.pug
@@ -7,7 +7,7 @@ mixin storeCard( store = {} )
             != h.icon('pencil')
       img(src=`/uploads/${store.photo || 'store.png'}`)
       h2.title 
-        a(href=`/store/${store.slug}`)= store.name
+        a(href=`/stores/${store.slug}`)= store.name
     .store__details
       - const storeDescriptionArray = store.description.split(' ').slice(0, 25)
       p= storeDescriptionArray.join(' ') + ( storeDescriptionArray.length === 25 ? '...': '' )
