--- a/greatest-node-application-ever/views/map.pug
+++ b/greatest-node-application-ever/views/map.pug
@@ -3,10 +3,8 @@ extends layout
 block content
   .inner
     h2 Find Stores
-    label(for="address") Address
-    input(type="text" id="address" name="location[address]")
-    label(for="lng") Longitude 
-    input(type="text" id="lng", name="location[coordinates][0]")
-    label(for="lat") Latitude 
-    input(type="text" id="lat", name="location[coordinates][1]")
-    #map.map
+    .map
+      .autocomplete
+        input.autocomplete__input(type="text" placeholder="Search for anything" name="geolocate")
+      #map
+        p Loading map...
