--- a/greatest-node-application-ever/views/mixins/_storeCard.pug
+++ b/greatest-node-application-ever/views/mixins/_storeCard.pug
@@ -2,6 +2,13 @@ mixin storeCard( store = {} )
   .store
     .store__hero
       .store__actions
+        if user
+          .store__action.store__action--heart
+             form.heart( method="POST" action=`/api/stores/${store._id}/heart`)
+              - const heartStrings = user.hearts.map( obj => obj.toString() )
+              - const alreadyHearted = heartStrings.includes(store._id.toString())
+              button.heart__button(type="submit" name="heart" class=( alreadyHearted ? 'heart__button--hearted' : '' ))
+                 != h.icon('heart')
         if user && store.author.equals( user._id ) 
           .store__action.store__action--edit
             a(href=`/stores/${store._id}/edit`)
