--- a/greatest-node-application-ever/views/store.pug
+++ b/greatest-node-application-ever/views/store.pug
@@ -1,5 +1,7 @@
 extends layout
 
+include mixins/_reviewForm
+
 block content
   .single
     .single__hero
@@ -18,6 +20,21 @@ block content
             li.tag
               a.tag__link(href=`/tags/${tag}`)
                 span.tag__text ##{tag}
+      +reviewForm( store._id )
+      each review in reviews
+        .review
+          .review__header
+            .review__author 
+              img.avatar(src=`${review.author.gravatar}`)
+              span= review.author.name
+            .review__stars
+              = review.rating
+            .review__time
+              = h.moment(review.created).fromNow()
+          .review__body
+            p= review.text
+
+        
 
 
     
