--- a/greatest-node-application-ever/public/sass/partials/_reviews.scss
+++ b/greatest-node-application-ever/public/sass/partials/_reviews.scss
@@ -4,13 +4,13 @@
   border-bottom: 0;
   border-bottom: 1px solid $grey;
   margin-bottom: 2rem;
-  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   position: relative;
   padding-left: 5px;
   &:before {
-    width:5px;
+    width: 5px;
     left: 0;
-    content: '';
+    content: "";
     display: block;
     background: $verticalGrad;
     position: absolute;
@@ -35,23 +35,25 @@
   }
   &__author {
     justify-content: flex-start;
-    padding-left:  2rem;
+    padding-left: 2rem;
     display: flex;
     .avatar {
       margin-right: 2rem;
     }
   }
-  &__time {
+  &__time,
+  &__meta {
     font-size: 1.2rem;
     color: lighten(black, 60%);
   }
   &__stars {
     color: $yellow;
   }
-  &__body {
+  &__body,
+  &__meta {
     padding: 2rem;
   }
   p {
-    white-space:pre-wrap;
+    white-space: pre-wrap;
   }
 }
