Users who had previously left a review can choose to edit it

--- a/greatest-node-application-ever/public/sass/partials/_reviewer.scss
+++ b/greatest-node-application-ever/public/sass/partials/_reviewer.scss
@@ -72,4 +72,21 @@
       margin: 0;
     }
   }
+  &__form.hidden {
+    display: none;
+  }
+  &__edit {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem;
+    &.hidden {
+      display: none;
+    }
+  }
+  &__edit__button {
+    padding: 0.5rem 1rem;
+    margin-top: 1rem;
+    cursor: pointer;
+  }
 }
