--- a/greatest-node-application-ever/views/store.pug
+++ b/greatest-node-application-ever/views/store.pug
@@ -20,7 +20,7 @@ block content
             li.tag
               a.tag__link(href=`/tags/${tag}`)
                 span.tag__text ##{tag}
-      +reviewForm( store._id )
+      +reviewForm( store._id, existingReview )
       .reviews(data-store-id=store._id)
 
         
