--- a/greatest-node-application-ever/views/mixins/_reviewForm.pug
+++ b/greatest-node-application-ever/views/mixins/_reviewForm.pug
@@ -14,7 +14,7 @@ mixin reviewForm( storeId, existingReview = {} )
         .reviewer__meta
           .reviewer__stars
             each starValue in [5,4,3,2,1]
-              input(type="radio" name='rating' id=`star${starValue}` value=starValue required )
+              input(type="radio" name='rating' id=`star${starValue}` value=starValue checked=(starValue === existingReview.rating) required )
               label(for=`star${starValue}`) #{starValue} Stars
           input.button(type="submit" value="Submit Review →")
         .reviewer__errors.hide
