--- a/greatest-node-application-ever/views/mixins/_reviewForm.pug
+++ b/greatest-node-application-ever/views/mixins/_reviewForm.pug
@@ -16,6 +16,8 @@ mixin reviewForm( storeId, existingReview = {} )
             each starValue in [5,4,3,2,1]
               input(type="radio" name='rating' id=`star${starValue}` value=starValue checked=(starValue === existingReview.rating) required )
               label(for=`star${starValue}`) #{starValue} Stars
+            //-  Default rating, invisible
+            input(type="radio" name='rating' value="0" checked=(existingReview.rating ? false : true) required )
           input.button(type="submit" value="Submit Review →")
         .reviewer__errors.hide
       
