--- a/greatest-node-application-ever/views/mixins/_storeCard.pug
+++ b/greatest-node-application-ever/views/mixins/_storeCard.pug
@@ -9,10 +9,10 @@ mixin storeCard( store = {} )
               - const alreadyHearted = heartStrings.includes(store._id.toString())
               button.heart__button(type="submit" name="heart" class=( alreadyHearted ? 'heart__button--hearted' : '' ))
                  != h.icon('heart')
-        if store.reviewCount > 0
+        if store.reviews && store.reviews.length > 0
           .store__action.store__action--review
             != h.icon('review')
-            | #{store.reviewCount}
+            | #{store.reviews.length}
         if user && store.author.equals( user._id ) 
           .store__action.store__action--edit
             a(href=`/stores/${store._id}/edit`)
