Only display top stores with at least 2 reviews. Limit decimals in avg

--- a/greatest-node-application-ever/views/top.pug
+++ b/greatest-node-application-ever/views/top.pug
@@ -20,4 +20,4 @@ block content
             td= i + 1
             td= store.name
             td= store.count
-            td= store.average
+            td= store.average.toFixed(1)
