--- a/greatest-node-application-ever/views/mixins/_storeCard.pug
+++ b/greatest-node-application-ever/views/mixins/_storeCard.pug
@@ -9,14 +9,14 @@ mixin storeCard( store = {} )
               - const alreadyHearted = heartStrings.includes(store._id.toString())
               button.heart__button(type="submit" name="heart" class=( alreadyHearted ? 'heart__button--hearted' : '' ))
                  != h.icon('heart')
-        if store.reviews && store.reviews.length > 0
-          .store__action.store__action--review
-            != h.icon('review')
-            | #{store.reviews.length}
         if user && store.author.equals( user._id ) 
           .store__action.store__action--edit
             a(href=`/stores/${store._id}/edit`)
               != h.icon('pencil')
+        if store.reviews && store.reviews.length > 0
+          .store__action.store__action--count
+            != h.icon('review')
+            | #{store.reviews.length}
       img(src=`/uploads/${store.photo || 'store.png'}`)
       h2.title 
         a(href=`/stores/${store.slug}`)= store.name
