Add crappy pagination

--- a/greatest-node-application-ever/views/stores.pug
+++ b/greatest-node-application-ever/views/stores.pug
@@ -8,3 +8,10 @@ block content
     .stores
       each store in stores
         +storeCard( store )
+    .pagination
+      if pagination.prev
+        .pagination__prev
+          a.pagination__text(href=`${pagination.prev}`) Previous Page
+      if pagination.next
+        .pagination__next
+          a.pagination__text(href=`${pagination.next}`) Next Page
